# Youtube-music-playlist-organiser-AI

./: .gitignore  README.md  pyproject.toml  vercel.json
app/: config.py  constants.py  db.py  main.py  models.py  security.py
app/services/: azure_openai.py  organizer.py  settings.py  youtube.py
static/: styles.css
templates/: base.html  index.html  run_detail.html
tests/: test_app.py  test_core.py
