[project]
name = "yt-mood-playlist-organizer"
version = "0.1.0"
description = "Local FastAPI app to organize YouTube songs into mood playlists with Azure OpenAI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "jinja2>=3.1.4",
  "google-api-python-client>=2.179.0",
  "google-auth-oauthlib>=1.2.1",
  "itsdangerous>=2.2.0",
  "openai>=1.109.1",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
